fix accordion style on safari

--- a/core/styles/globals.css
+++ b/core/styles/globals.css
@@ -27,3 +27,8 @@
     box-shadow: none;
     
 }
+
+/* Tweak accordion on safari */
+summary::-webkit-details-marker { 
+    display: none; 
+}
